# OregonWaterDataPortal-ETL

./: '  .env  .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  LICENSE  README.md  aqwms.json  config.yml  dagster.yaml  docker-compose-prod.yml  docker-compose.yaml  hello.py  makefile  owdp.env  pyproject.toml  requirements.txt  test.xml
.github/workflows/: go_lint.yml  pyright.yml  pytest.yml  requirements.yml
docker/: Dockerfile_postgis  indices.sql  nginx.conf  uid-ossp.sql  wait-for-frost-and-init-db.sh
docker/container_monitor/: Dockerfile  eventHandler.go  go.mod  go.sum  lib.go  logHandler.go  main.go  monitor.sh  readme.md
docker/dagster/: Dockerfile
docker/database/: Dockerfile  customizations.sql
docker/frost/: Dockerfile  indices.sql  wait-for-frost-and-init-db.sh
docker/grafana/: datasource.yml
docker/nginx/: nginx.conf
docker/pgadmin/: servers.json  setup.sh
docker/prometheus/: prometheus.yml
docker/pygeoapi/: Dockerfile  entrypoint.sh  pygeoapi.config.yml
docs/: awqms.md  dagster.md  datasources.md  docs.md  groundwater.md  wrd.md  xlsx.md
test/: __init__.py  lib.py
tests/: lib.py  test_lib.py  test_ontology.py  test_util.py
tests/awqms/: conftest.py  test_e2e.py  test_lib.py  test_sta_generation.py
tests/odwr/: lib.py  test_e2e.py  test_frost.py  test_lib.py  test_upstream.py
tests/xlsx/: IoW_Reccomended_Obs_Data_Elements.xlsx  test_xlsx.py
userCode/: __init__.py  cache.py  cache_test.py  env.py  env_test.py  helper_classes.py  ontology.py  ontology_test.py  schema.py  types.py  util.py  util_test.py
(+87 files in other folders)
