[project]
name = "oregonwaterdataportal-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster-webserver>=1.9.4",
    "dagster>=1.9.4",
    "httpx>=0.28.1",
    "requests>=2.32.3",
    "pytest>=8.3.4",
]

[tool.dagster]
module_name = "userCode.odwr.dag"
code_location_name = "userCode"
